css/about.css
html {
  background: url("../images/bg.jpg") no-repeat center center fixed;
  -webkit-background-size: cover;
  -moz-background-size: cover;
  -o-background-size: cover;
  background-size: cover;
}

body {
  margin: 0;
  padding: 0;
}

.no-scroll {
  overflow: hidden;
}

.about-main {
  position: relative;
  display: grid;
  grid-template-columns: 1fr;
  justify-content: center;
  align-items: flex-start;
  width: 70%;
  height: auto;
  max-width: 100%;
  margin: 5% auto 0;
  border: none;
}

.intro {
  background-color: #eceef1;
  color: #272728;
  border: none;
  padding: 0 2rem 1.5rem 2rem;
}

.intro h1 {
  line-height: 3.3rem;
  font-size: 3rem;
  margin-bottom: 1.5rem;
}

.aboutme {
  background-color: #272728;
  color: #eceef1;
  padding: 2rem 2rem 2rem 2rem;
  display: flex;
  flex-direction: column;
  align-items: flex-start;
  justify-content: flex-start;
}

.aboutme h2 {
  font-size: 2.5rem;
  line-height: 2.75rem;
}

.aboutmewrapper {
  display: flex;
  flex-direction: row;
  align-items: center;
  justify-content: flex-start;
  margin: 0;
  padding: 0;
}

.aboutme1 {
  margin: 0;
  width: 40%;
  display: flex;
  justify-content: center;
  align-items: center;
}

.aboutme1 img {
  padding: 0;
  width: 60%;
  height: auto;
}

.aboutme2 {
  width: 60%;
}

.aboutme2 p {
  width: 95%;
}

.highlight {
  background-color: #2ca78c;
  font-size: 2rem;
  font-weight: 700;
}

.learning {
  background-color: #eceef1;
  color: #272728;
  padding: 0 2rem 2rem 2rem;
  border: none;
}

.learning h3 {
  font-size: 2rem;
  line-height: 2.1rem;
  margin-bottom: 1.5rem;
  margin-top: 1.5rem;
}

.learning a {
  color: #2ca78c;
}

.learning a:hover {
  opacity: 0.8;
}

.cards-section {
  margin-top: -1px;
  display: flex;
  background-color: #eceef1;
  justify-content: center;
  padding: 2rem 2rem 0rem 2rem;
  gap: 4rem;
}

.card {
  display: flex;
  flex-direction: column;
  align-items: center;
  background-color: #ffffff;
  border-radius: 5px;
  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
  overflow: hidden;
  width: 300px;
  max-width: 25%;
  margin-bottom: 1rem;
  transition: transform 0.3s ease-in-out, box-shadow 0.3s ease-in-out;
}

.card:hover {
  transform: scale(1.01);
  box-shadow: 0 8px 16px rgba(0, 0, 0, 0.3);
}

.card img {
  width: 300px;
  height: auto;
  object-fit: cover;
}

.card-content {
  padding: 0 1rem 0 1rem;
  flex: 1;
}

.card-content h4 {
  line-height: 0.9rem;
  font-size: 0.9rem;
  text-align: center;
  color: #272728;
}

.card-content p {
  color: #272728;
  line-height: 0.8rem;
  font-size: 0.8rem;
}

.outsidework {
  background-color: #272728;
  color: #eceef1;
  padding: 2rem 2rem 2rem 2rem;
  display: flex;
  flex-direction: column;
  align-items: flex-start;
  justify-content: flex-start;
}

.outsidework h4 {
  font-size: 1.8rem;
  line-height: 1.9rem;
}

.outsideworkwrapper {
  display: flex;
  flex-direction: row;
  align-items: center;
  justify-content: center;
  margin: 0;
  padding: 0;
}

.outsideworkwrapper p {
  margin-bottom: 0.5rem;
}

.outside1 a {
  color: #2ca78c;
}

.outside1 a:hover {
  color: #1c856f;
}

.outside1 {
  margin: 0;
  width: 80%;
  display: flex;
  flex-direction: column;
  justify-content: flex-start;
  align-items: flex-start;
}

.outside2 {
  margin: 0;
  width: 40%;
  display: flex;
  justify-content: center;
  align-items: center;
}

.outside2 img {
  width: 55%;
  height: auto;
}

.adventures {
  background-color: #eceef1;
  color: #272728;
  padding: 0 2rem 2rem 2rem;
  border: none;
}

.adventures h5 {
  font-size: 1.6rem;
  line-height: 1.76rem;
  margin-bottom: 1.5rem;
  margin-top: 1.5rem;
}

/* MAPS */

/* MAP */
#map {
  border-radius: 10px;
  margin-top: 2rem;
  height: 300px;
  width: 80%;
  z-index: 1;
  display: flex;
  justify-self: center;
}

/* Modal and slideshow styling */

#myModal {
  display: none;
  position: fixed;
  top: 0;
  left: 0;
  width: 100vw;
  height: 100vh;
  background-color: #eceef1;
  z-index: 9999;
  justify-content: center;
  align-items: center;
  opacity: 0;
  visibility: hidden;
  transition: opacity 0.3s ease, visibility 0.3s ease;
}

.modal {
  display: flex;
  justify-content: center;
  align-items: center;
  position: fixed;
  top: 0;
  left: 0;
  width: 100vw;
  height: 100vh;
  background-color: #eceef1;
  z-index: 9999;
}

.modal-content {
  position: relative;
  display: flex;
  flex-direction: row;
  justify-self: center;
  align-self: center;
  max-width: 70%;
  max-height: 80vh;
  background-color: white;
  padding: 0px;
  border: 2px #272728 solid;
  margin-top: 5rem;
}

.blurb-text {
  font-size: 1rem;
  width: 30%;
  border-left: 2px #272728 solid;
}

.location-title {
  font-weight: bold;
  padding-left: 1rem;
  margin-top: 0.5rem;
  font-size: 2rem;
  width: 80%;
}

.location-place {
  padding-left: 1rem;
  font-style: italic;
  width: 80%;
}

.location-text {
  margin-top: 2rem;
  padding-left: 1rem;
  width: 80%;
  margin-right: 0;
}

.slideshow-container {
  position: relative;
  max-width: 70%;
  max-height: 80vh;
  display: flex;
  justify-self: center;
  align-self: center;
  background-color: #eceef1;
}

.slideshow-container img {
  width: 100%;
  max-height: 80vh;
  object-fit: contain;
}

.mySlides {
  width: 100%;
  height: auto;
  object-fit: contain;
}

.close {
  top: 0.8rem;
  right: 0.8rem;
  display: flex;
  justify-content: center;
  align-items: center;
  font-family: Arial, Helvetica, sans-serif;
  font-size: 1.8rem;
  width: 40px;
  height: 40px;
  color: #f7f7f7;
  background-color: #1c856f;
  border: 2px solid #1c856f;
  border-radius: 50%;
  cursor: pointer;
  z-index: 4;
  transition: transform 0.3s ease;
  position: absolute;
  bottom: 10%;
}

.close:hover {
  color: rgb(247, 247, 247, 0.7);
}

.modal-buttons {
  display: flex;
  justify-content: center;
  justify-self: center;
  align-items: center;
  margin-top: 1rem;
  width: 20%;
}

.prev {
  margin-right: 1rem;
}

.next {
  margin-left: 1rem;
}

.prev,
.next {
  color: rgb(247, 247, 247);
  cursor: pointer;
  width: 40px;
  height: 40px;
  font-weight: bold;
  font-size: 1rem;
  border: none;
  background-color: #1c856f;
  border-radius: 50%;
  transition: transform 0.3s ease;
  border: 2px solid #1c856f;
}

.prev:hover,
.next:hover {
  color: rgb(247, 247, 247, 0.7);
}

.logo1 {
  display: none;
}
/* Maps end */

@media (max-width: 1476px) {
  .cards-section {
    margin-top: -1px;
    display: flex;
    flex-direction: row;
    background-color: #eceef1;
    align-items: center;
    padding: 2rem 2rem 0rem 2rem;
    gap: 2rem;
  }

  .card {
    display: flex;
    flex-direction: column;
    align-items: center;
    overflow: hidden;
    width: 200px;
    height: 225px;
    max-width: 90%;
    margin-bottom: 1rem;
  }

  .card img {
    width: 200px;
    height: auto;
    object-fit: cover;
  }

  .slideshow-container img {
    width: 100%;
    height: auto;
    object-fit: contain;
  }

  .close {
    top: 0.4rem;
    right: 0.4rem;
    width: 32px;
    height: 32px;
  }

  .prev,
  .next {
    width: 32px;
    height: 32px;
    font-size: 1.1rem;
    top: 93%;
  }
}

@media (max-width: 1274px) {
  .aboutme1 img {
    padding: 0;
    width: 80%;
    height: auto;
  }

  .outside2 img {
    width: 90%;
    height: auto;
  }

  .location-title {
    font-size: 1.3rem;
  }
}

@media (max-width: 1095px) {
  .about-main {
    position: relative;
    display: grid;
    grid-template-columns: 1fr;
    justify-content: center;
    align-items: flex-start;
    width: 100%;
    height: auto;
    max-width: 100%;
    margin: 0;
  }

  .cards-section {
    margin-top: -1px;
    display: flex;
    flex-direction: row;
    background-color: #eceef1;
    align-items: center;
    padding: 2rem 2rem 0rem 2rem;
    gap: 2rem;
  }

  .card {
    display: flex;
    flex-direction: column;
    align-items: center;
    overflow: hidden;
    width: 250px;
    height: 250px;
    max-width: 70%;
    margin-bottom: 1rem;
  }

  .card img {
    width: 250px;
    height: auto;
    object-fit: cover;
  }

  .aboutmewrapper {
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: flex-start;
  }

  .aboutme1 {
    width: 100%;
  }

  .aboutme1 img {
    padding: 0 2rem 2rem 0;
    width: 40%;
    height: auto;
  }

  .aboutme2 {
    width: 100%;
  }

  .outsideworkwrapper {
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: center;
    margin: 0;
    padding: 0;
  }

  .outside1 {
    width: 100%;
  }

  .outside2 {
    width: 100%;
  }

  .outside2 img {
    width: 35%;
    height: auto;
    padding: 2rem 2rem 0rem 2rem;
  }

  .blurb-text {
    font-size: 1rem;
    width: 30%;
  }

  .location-title {
    font-weight: bold;
    padding-left: 1rem;
    margin-top: 0.5rem;
    font-size: 1rem;
    width: 80%;
  }

  .location-place {
    padding-left: 1rem;
    font-style: italic;
    width: 80%;
  }

  .location-text {
    margin-top: 2rem;
    padding-left: 1rem;
    width: 80%;
    margin-right: 0;
  }
}

@media (max-width: 982px) {
  .logo1 {
    display: flex;
    justify-content: center;
    margin-top: 0.5rem;
  }

  .aboutme2 p {
    width: 100%;
  }

  .cards-section {
    margin-top: -1px;
    display: flex;
    flex-direction: row;
    background-color: #eceef1;
    align-items: center;
    padding: 0;
    gap: 3rem;
  }

  .card {
    display: flex;
    flex-direction: column;
    align-items: center;
    background-color: #ffffff;
    border-radius: 5px;
    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
    overflow: hidden;
    width: 200px;
    height: 250px;
    max-width: 80%;
    margin-bottom: 1rem;
  }

  .cards img {
    width: 150px;
  }

  .about-main {
    width: 100%;
    max-width: 100%;
  }

  .aboutme1 img {
    padding: 0 2rem 2rem 0;
    width: 50%;
    height: auto;
  }

  .outside2 img {
    width: 50%;
    height: auto;
    padding: 2rem 2rem 0rem 2rem;
  }

  .modal-content {
    display: flex;
    flex-direction: column;
  }

  .slideshow-container {
    margin-top: 1rem;
    margin-bottom: 1rem;
  }

  .blurb-text {
    border-left: none;
    border-top: 2px solid #272728;
    width: 100%;
    max-width: 100%;
    margin-bottom: 1rem;
  }

  .location-title {
    text-align: center;
    font-size: 1.5rem;
  }

  .location-place {
    text-align: center;
  }
}

@media (max-width: 805px) {
  .aboutme1 img {
    padding: 0 2rem 2rem 0;
    width: 60%;
    height: auto;
  }

  .outside2 img {
    width: 60%;
    height: auto;
    padding: 2rem 2rem 0rem 2rem;
  }

  .cards-section {
    margin-top: -1px;
    display: flex;
    flex-direction: row;
    background-color: #eceef1;
    align-items: center;
    padding: 0;
    gap: 3rem;
  }

  .card {
    display: flex;
    flex-direction: column;
    align-items: center;
    overflow: hidden;
    width: 150px;
    height: 275px;
    max-width: 80%;
    margin-bottom: 1rem;
  }

  .cards img {
    width: 150px;
  }

  .cards-section {
    display: none;
  }

  #map {
    border-radius: 10px;
    margin-top: 2rem;
    height: 300px;
    width: 100%;
    z-index: 1;
    display: flex;
    justify-content: center;
  }

  .modal-content {
    margin-top: 2rem;
  }
}

